[package]
name    = "paybox"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default          = ["chrono", "derive_new", "platform", "reqwest", "tokio"]
wechat_pay_v3    = ["wechat_pay_app", "wechat_pay_h5", "wechat_pay_jsapi"]
wechat_pay_jsapi = ["pay"]
wechat_pay_h5    = ["pay"]
wechat_pay_app   = ["pay"]

alipay      = ["pay"]
alipay_aes  = ["dep:aes", "dep:ctr"]
alipay_cert = []

third_party = []
pay         = []
postgres    = ["dep:postgres-types"]
chrono      = ["dep:chrono"]
time        = ["dep:time"]


platform = []
tokio    = ["dep:tokio"]
reqwest  = ["dep:reqwest", "dep:tokio"]

derive_new = ["dep:derive-new"]


[dependencies]
aes-gcm-siv    = "0.11.1"
base64         = "0.21.5"
chrono         = { version = "0.4.31", optional = true }
derive-new     = { version = "0.6.0", optional = true }
postgres-types = { version = "0.2.6", optional = true }
rand           = "0.8.5"
rsa            = { version = "0.9.3", features = ["pem", "serde", "sha1", "sha2"] }
rust_decimal   = "1.33.1"
serde          = "1.0.195"
serde_json     = "1.0.111"
time           = { version = "0.3.30", optional = true }
tokio          = { version = "1.35.1", features = ["full"], optional = true }
tracing        = "0.1.40"
uuid           = "1.6.1"
x509-parser    = "0.15.1"
reqwest        = { version = "0.11.22", features = ["json"], optional = true }
either         = "1.9.0"
cfg-if         = "1.0.0"
serde_repr     = "0.1.18"
aes            = { version = "0.8.3", optional = true }
ctr            = { version = "0.9.2", optional = true }
urlencoding    = "2.1.3"
ahash          = "0.8.7"
hex            = "0.4.3"
once_cell      = "1.19.0"
dashmap        = "5.5.3"
